--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -14,5 +14,11 @@
             th:text="${person.getName()}">user
     </a>
 </div>
+
+<br/>
+<hr/>
+
+<a href="/people/new">Create new person</a>
+
 </body>
 </html>
