--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -11,7 +11,7 @@
 <div th:each="person : ${people}">
     <a
             th:href="@{/people/{id}(id=${person.getId()})}"
-            th:text="${person.getName()}">user
+            th:text="${person.getName() + ', ' + person.getAge()}">user
     </a>
 </div>
 
